syntax = "proto3";

package streaming.v1;

option go_package = "github.com/cshep4/proto-repository/gen/go/streaming/v1";
option java_multiple_files = true;
option java_package = "com.cshep4.proto.streaming.v1";
option php_namespace = "Streaming\\V1";

service StreamingService {
  rpc ServerStreaming(ServerStreamingRequest) returns (stream ServerStreamingResponse);

  rpc NewClientStreaming(stream NewClientStreamingRequest) returns (NewClientStreamingResponse);
}

message ServerStreamingRequest {
  string message = 2;
}

message ServerStreamingResponse {
  string output_message = 1;
}

message NewClientStreamingRequest {
  string name = 1;
}

message NewClientStreamingResponse {
  string received_messages = 1;
}